Compiler/KoLangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from KoLang.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class KoLangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, PRINT=21, READ=22, STRING=23, ID=24, INT=25, 
		REAL=26, ASSIGN=27, LPARENTHESIS=28, RPARENTHESIS=29, LBRACKET=30, RBRACKET=31, 
		LBRACE=32, RBRACE=33, WS=34, COMMENT=35, MULTILINECOMMENT=36;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_value = 2, RULE_arrayAssignItem = 3, 
		RULE_math = 4, RULE_number = 5, RULE_stringConcat = 6, RULE_concatVal = 7, 
		RULE_arrayVal = 8, RULE_whileComp = 9, RULE_elseifStatement = 10, RULE_elseStatement = 11, 
		RULE_comparision = 12, RULE_compValueFirst = 13, RULE_compValueSecond = 14, 
		RULE_callFunction = 15, RULE_functionArguments = 16, RULE_functionArg = 17, 
		RULE_givenFunctionArguments = 18, RULE_givenFunctionArg = 19, RULE_functionArgType = 20, 
		RULE_functionReturnType = 21, RULE_operatorOne = 22, RULE_operatorTwo = 23, 
		RULE_compareOperator = 24;
	public static readonly string[] ruleNames = {
		"program", "statement", "value", "arrayAssignItem", "math", "number", 
		"stringConcat", "concatVal", "arrayVal", "whileComp", "elseifStatement", 
		"elseStatement", "comparision", "compValueFirst", "compValueSecond", "callFunction", 
		"functionArguments", "functionArg", "givenFunctionArguments", "givenFunctionArg", 
		"functionArgType", "functionReturnType", "operatorOne", "operatorTwo", 
		"compareOperator"
	};

	private static readonly string[] _LiteralNames = {
		null, "'zmienna'", "','", "'if'", "'while'", "'return'", "'+'", "'else if'", 
		"'else'", "'int'", "'double'", "'void'", "'-'", "'*'", "'/'", "'<'", "'>'", 
		"'<='", "'>='", "'=='", "'!='", "'pokazMiSwojeTowary'", "'DajMiLiczbe'", 
		null, null, null, null, "'='", "'('", "')'", "'['", "']'", "'{'", "'}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "PRINT", "READ", 
		"STRING", "ID", "INT", "REAL", "ASSIGN", "LPARENTHESIS", "RPARENTHESIS", 
		"LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "WS", "COMMENT", "MULTILINECOMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "KoLang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static KoLangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public KoLangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public KoLangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(KoLangParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << PRINT) | (1L << READ) | (1L << ID))) != 0)) {
				{
				{
				State = 50;
				statement();
				}
				}
				State = 55;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 56;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
	 
		public StatementContext() { }
		public virtual void CopyFrom(StatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PrintContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRINT() { return GetToken(KoLangParser.PRINT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPARENTHESIS() { return GetToken(KoLangParser.LPARENTHESIS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPARENTHESIS() { return GetToken(KoLangParser.RPARENTHESIS, 0); }
		public PrintContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterPrint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitPrint(this);
		}
	}
	public partial class ReadContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode READ() { return GetToken(KoLangParser.READ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPARENTHESIS() { return GetToken(KoLangParser.LPARENTHESIS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(KoLangParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPARENTHESIS() { return GetToken(KoLangParser.RPARENTHESIS, 0); }
		public ReadContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterRead(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitRead(this);
		}
	}
	public partial class ChangeArrayItemValueContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(KoLangParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACKET() { return GetToken(KoLangParser.LBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(KoLangParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACKET() { return GetToken(KoLangParser.RBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(KoLangParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MathContext math() {
			return GetRuleContext<MathContext>(0);
		}
		public ChangeArrayItemValueContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterChangeArrayItemValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitChangeArrayItemValue(this);
		}
	}
	public partial class AssignArrayContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(KoLangParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACKET() { return GetToken(KoLangParser.LBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACKET() { return GetToken(KoLangParser.RBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(KoLangParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(KoLangParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArrayValContext[] arrayVal() {
			return GetRuleContexts<ArrayValContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArrayValContext arrayVal(int i) {
			return GetRuleContext<ArrayValContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(KoLangParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(KoLangParser.INT, 0); }
		public AssignArrayContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterAssignArray(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitAssignArray(this);
		}
	}
	public partial class PrintArrayItemContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRINT() { return GetToken(KoLangParser.PRINT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPARENTHESIS() { return GetToken(KoLangParser.LPARENTHESIS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(KoLangParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACKET() { return GetToken(KoLangParser.LBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(KoLangParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACKET() { return GetToken(KoLangParser.RBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPARENTHESIS() { return GetToken(KoLangParser.RPARENTHESIS, 0); }
		public PrintArrayItemContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterPrintArrayItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitPrintArrayItem(this);
		}
	}
	public partial class FunctionContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionReturnTypeContext functionReturnType() {
			return GetRuleContext<FunctionReturnTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(KoLangParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPARENTHESIS() { return GetToken(KoLangParser.LPARENTHESIS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPARENTHESIS() { return GetToken(KoLangParser.RPARENTHESIS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(KoLangParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(KoLangParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FunctionArgumentsContext functionArguments() {
			return GetRuleContext<FunctionArgumentsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MathContext math() {
			return GetRuleContext<MathContext>(0);
		}
		public FunctionContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
	}
	public partial class AssignFunctionContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(KoLangParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(KoLangParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CallFunctionContext callFunction() {
			return GetRuleContext<CallFunctionContext>(0);
		}
		public AssignFunctionContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterAssignFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitAssignFunction(this);
		}
	}
	public partial class IfStatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPARENTHESIS() { return GetToken(KoLangParser.LPARENTHESIS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ComparisionContext comparision() {
			return GetRuleContext<ComparisionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPARENTHESIS() { return GetToken(KoLangParser.RPARENTHESIS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(KoLangParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(KoLangParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElseifStatementContext elseifStatement() {
			return GetRuleContext<ElseifStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElseStatementContext elseStatement() {
			return GetRuleContext<ElseStatementContext>(0);
		}
		public IfStatementContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterIfStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitIfStatement(this);
		}
	}
	public partial class WhileContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPARENTHESIS() { return GetToken(KoLangParser.LPARENTHESIS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public WhileCompContext whileComp() {
			return GetRuleContext<WhileCompContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPARENTHESIS() { return GetToken(KoLangParser.RPARENTHESIS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(KoLangParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(KoLangParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public WhileContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterWhile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitWhile(this);
		}
	}
	public partial class InvokeFunctionContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public CallFunctionContext callFunction() {
			return GetRuleContext<CallFunctionContext>(0);
		}
		public InvokeFunctionContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterInvokeFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitInvokeFunction(this);
		}
	}
	public partial class AssignContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(KoLangParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(KoLangParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public AssignContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterAssign(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitAssign(this);
		}
	}
	public partial class AssignArrayItemToIDContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(KoLangParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(KoLangParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArrayAssignItemContext arrayAssignItem() {
			return GetRuleContext<ArrayAssignItemContext>(0);
		}
		public AssignArrayItemToIDContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.EnterAssignArrayItemToID(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKoLangListener typedListener = listener as IKoLangListener;
			if (typedListener != null) typedListener.ExitAssignArrayItemToID(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			State = 163;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				_localctx = new PrintContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 58;
				Match(PRINT);
				State = 59;
				Match(LPARENTHESIS);
				State = 60;
				value();
				State = 61;
				Match(RPARENTHESIS);
				}
				break;
			case 2:
				_localctx = new PrintArrayItemContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 63;
				Match(PRINT);
				State = 64;
				Match(LPARENTHESIS);
				State = 65;
				Match(ID);
				State = 66;
				Match(LBRACKET);
				State = 67;
				Match(INT);
				State = 68;
				Match(RBRACKET);
				State = 69;
				Match(RPARENTHESIS);
				}
				break;
			case 3:
				_localctx = new ReadContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 70;
				Match(READ);
				State = 71;
				Match(LPARENTHESIS);
				State = 72;
				Match(ID);
				State = 73;
				Match(RPARENTHESIS);
				}
				break;
			case 4:
				_localctx = new AssignContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 74;
				Match(T__0);
				State = 75;
				Match(ID);
				State = 76;
				Match(ASSIGN);
				State = 77;
				value();
				}
				break;
			case 5:
				_localctx = new AssignArrayItemToIDContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 78;
				Match(T__0);
				State = 79;
				Match(ID);
				State = 80;
				Match(ASSIGN);
				State = 81;
				arrayAssignItem();
				}
				break;
			case 6:
				_localctx = new ChangeArrayItemValueContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 82;
				Match(ID);
				State = 83;
				Match(LBRACKET);
				State = 84;
				Match(INT);
				State = 85;
				Match(RBRACKET);
				State = 86;
				Match(ASSIGN);
				State = 87;
				math(0);
				}
				break;
			case 7:
				_localctx = new AssignArrayContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 88;
				Match(T__0);
				State = 89;
				Match(ID);
				State = 90;
				Match(LBRACKET);
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==INT) {
					{
					State = 91;
					Match(INT);
					}
				}

				State = 94;
				Match(RBRACKET);
				State = 95;
				Match(ASSIGN);
				State = 96;
				Match(LBRACE);
				State = 97;
				arrayVal();
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__1) {
					{
					{
					State = 98;
					Match(T__1);
					State = 99;
					arrayVal();
					}
					}
					State = 104;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 105;
				Match(RBRACE);
				}
				break;
			case 8:
				_localctx = new IfStatementContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 107;
				Match(T__2);
				State = 108;
				Match(LPARENTHESIS);
				State = 109;
				comparision();
				State = 110;
				Match(RPARENTHESIS);
				State = 111;
				Match(LBRACE);
				State = 115;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << PRINT) | (1L << READ) | (1L << ID))) != 0)) {
					{
					{
					State = 112;
					statement();
					}
					}
					State = 117;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 118;
				Match(RBRACE);
				State = 120;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__6) {
					{
					State = 119;
					elseifStatement();
					}
				}

				State = 123;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__7) {
					{
					State = 122;
					elseStatement();
					}
				}

				}
				break;
			case 9:
				_localctx = new WhileContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 125;
				Match(T__3);
				State = 126;
				Match(LPARENTHESIS);
				State = 127;
				whileComp();
				State = 128;
				Match(RPARENTHESIS);
				State = 129;
				Match(LBRACE);
				State = 133;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << PRINT) | (1L << READ) | (1L << ID))) != 0)) {
					{
					{
					State = 130;
					statement();
					}
					}
					State = 135;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 136;
				Match(RBRACE);
				}
				break;
			case 10:
				_localctx = new FunctionContext(_localctx);
				EnterOuterAlt(_localctx, 10);
				{
				State = 138;
				functionReturnType();
				State = 139;
				Match(ID);
				State = 140;
				Match(LPARENTHESIS);
				State = 142;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__8 || _la==T__9) {
					{
					State = 141;
					functionArguments();
					}
				}

				State = 144;
				Match(RPARENTHESIS);
				State = 145;
				Match(LBRACE);
				State = 149;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << PRINT) | (1L << READ) | (1L << ID))) != 0)) {
					{
					{
					State = 146;
					statement();
					}
					}
					State = 151;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 154;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__4) {
					{
					State = 152;
					Match(T__4);
					State = 153;
					math(0);
					}
				}
